--- a/config/database.yml
+++ b/config/database.yml
@@ -12,14 +12,14 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-#test:
-#  adapter: postgresql
-#  database: iwabanow_test_db
-#  pool: 5
-#  timeout: 5000
-#
-#production:
-#  adapter: postgresql
-#  database: iwabanow_db
-#  pool: 5
-#  timeout: 5000
+test:
+  adapter: postgresql
+  database: iwabanow_test_db
+  pool: 5
+  timeout: 5000
+
+production:
+  adapter: postgresql
+  database: iwabanow_db
+  pool: 5
+  timeout: 5000
